[tool.poetry]
name = "foo"
version = "0.0.0"
description = ""
authors = ["Foo Example <foo@example.com>"]
packages = [{include = "foo"}]


[tool.poetry.dependencies]
python = ">=3.9,<3.10"
torch = { version = "1.10.0", source="torch" }


[[tool.poetry.source]]
name = "torch"
url = "https://download.pytorch.org/whl/cu102"
priority = "explicit"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
