[tool.poetry]
name = "foo"
version = "0.0.0"
description = ""
authors = ["Foo Example <foo@example.com>"]
packages = [{include = "foo"}]

[tool.poetry.dependencies]
python = ">=3.9,<3.10"
scikit-image = "^0.21.0"
sentry-sdk = "^1.5.8"
nms = "0.1.6"
tensorflow-cpu = "2.12.0"
tensorflow-addons = "0.20.0"
keras = "2.12.0"
opencv-python-headless = "4.8.1.78"
opencv-python = "4.8.1.78"
typing-extensions = "4.9.0"
dacite = "^1.6.0"
azure-core = "^1.26.0"
azure-cli = "^2.49.0"
torch = { version = "1.10.0", source="torch" }
torchvision = { version = "0.11.1", source="torch" }
imageio = "^2.31.1"
azureml-sdk = "^1.52.0"
requests = "^2.31.0"
pillow = "^10.0.1"
matplotlib = "^3.7.2"
pycocotools = "^2.0.6"
albumentations = "^1.3.1"
scikit-learn = "^1.3.0"
azure-storage-blob = "^12.13.0"
joblib = "^1.3.1"
aiohttp = "^3.8.4"
label-studio-sdk = "^0.0.29"
sahi = {git = "https://github.com/obss/sahi.git", rev = "b115f08f0c0aeeb151adf24e47c222d3483cc931"}
azureml-mlflow = "^1.52.0"
mlflow = "^2.7.1"
mmpretrain = "^1.0.1"
mmdet = "^3.1.0"
mmengine = "^0.10.1"
mmsegmentation = "^1.1.2"
mmcv = { url = "https://download.openmmlab.com/mmcv/dist/cu102/torch1.10.0/mmcv-2.0.1-cp39-cp39-manylinux1_x86_64.whl"}
yapf = "0.40.2"
segment-anything = { git = "https://github.com/facebookresearch/segment-anything.git", rev = "6fdee8f2727f4506cfbbe553e23b895e27956588"}
botocore = "1.34.11"
tensorflow-io-gcs-filesystem = "0.34.0"


[[tool.poetry.source]]
name = "torch"
url = "https://download.pytorch.org/whl/cu102"
priority = "explicit"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
